--- a/tutorial_IC_ENC2024_CNN.ipynb
+++ b/tutorial_IC_ENC2024_CNN.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/pepetonof/IC-ENC-2024/blob/main/tutorial_IC_ENC2024_CNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "FDDtWluTMOoI"
       },
       "source": []
@@ -566,7 +576,9 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPg8W/9JRflHig7qEZAJlkW",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
