--- a/Tutorial-IC-PG.ipynb
+++ b/Tutorial-IC-PG.ipynb
@@ -4,12 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "IgvWt7DIgZYV",
-        "j0PLPz9Jmph7",
-        "1F8mt8zTT00e",
-        "N3Mm6iuhVzRA"
-      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -273,7 +267,7 @@
         "from imblearn.under_sampling import RandomUnderSampler\n",
         "#Bibliotecas para clasificadores\n",
         "import sklearn\n",
-        "C, accuracy_score\n",
+        "from sklearn.metrics import confusion_matrix, accuracy_score\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.neural_network import MLPClassifier\n",
         "import torch.nn.functional as F\n",
